# nfl_predictor_ReactWebsite

./: .gitignore  README.md  app.py  builder.py  index.html  main.py  requirements.txt
assets/: index-BNGsK011.js  index-CtzwzCQr.js  index-CvxOc1fo.js  index-Cx5j91Wo.css  index-D5HrfgQh.js
backend/: app.py  main.py  predictions.db
backend/model_cache/: models_2025_week_1.joblib  models_2025_week_10.joblib  models_2025_week_11.joblib  models_2025_week_12.joblib  models_2025_week_13.joblib  models_2025_week_14.joblib  models_2025_week_15.joblib  models_2025_week_16.joblib  models_2025_week_17.joblib  models_2025_week_18.joblib  models_2025_week_2.joblib  models_2025_week_3.joblib  models_2025_week_4.joblib  models_2025_week_5.joblib  models_2025_week_6.joblib  models_2025_week_7.joblib  models_2025_week_8.joblib  models_2025_week_9.joblib
nfl-predictor-react-app/: index.html  package-lock.json  package.json  vite.config.ts
nfl-predictor-react-app/src/: App.tsx  index.css  teamLogos.tsx  types.tsx
nfl-predictor-react-app/src/components/: GameList.tsx  Header.tsx  SelectMenu.tsx  TeamBadge.tsx
python_files/: app.py  main.py  predictions.sqlite  pyproject.toml
python_files/model_cache/: models_2025_week_1.joblib
